--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "vite-jsconfig-paths": "^2.0.1",
-    "xml2js": "^0.6.2"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/node": "^22.5.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/xml2js": "^0.4.14",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
